# agent-playground

spike/python/05-put-it-all-together/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
spike/python/05-put-it-all-together/resources/agent-config/: editor#1.yaml  writer#1.yaml
spike/python/05-put-it-all-together/resources/agent-mock/google-genai/: editor#1-EDITOR_REVIEW_STORY-gen-content-resp-00001.json  editor#1-EDITOR_REVIEW_STORY-gen-content-resp-00002.json  editor#1-EDITOR_REVIEW_STORY-gen-content-resp-00003.json  writer#1-WRITER_FIRST_DRAFT-gen-content-resp-00002.json  writer#1-WRITER_FIRST_DRAFT-gen-content-resp-00003.json  writer#1-WRITER_REVISE_STORY-gen-content-resp-00001.json  writer#1-WRITER_REVISE_STORY-gen-content-resp-00002.json
spike/python/05-put-it-all-together/resources/postgres/init-db/: 00-create-table.sql
spike/python/05-put-it-all-together/src/: main.py
spike/python/05-put-it-all-together/src/agent/: chat.py  common.py  google.py
spike/python/05-put-it-all-together/src/messaging/: rabbitmq_pika.py
spike/python/05-put-it-all-together/src/repository/: postgres.py
spike/python/05-put-it-all-together/test/agent/: test_common.py  test_google-genai.py
spike/python/05-put-it-all-together/test/repository/: test_chat_repo.py
spike/python/10-retry-and-DLQ/: README.md  compose.yml  pyproject.toml
spike/python/10-retry-and-DLQ/resources/: config.yaml
spike/python/10-retry-and-DLQ/src/: main.py
spike/python/10-retry-and-DLQ/src/llm/: google_genai.py
spike/python/10-retry-and-DLQ/src/messaging/: rabbitmq.py
(+104 files in other folders)
