[project]
name = "05-put-it-all-together"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "google-genai>=2.8.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
